--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@ h1 {
   text-align: center;
   margin-top: 1em;
   margin-bottom: 1em;
+  font-size: 34px;
 }
 
 #guess-input {
   display: block;
   margin: 20px auto 20px;
   padding: 10px;
-  font-size: 18px;
+  font-size: 24px;
   width: 250px;
   border: 1px solid #ccc;
   border-radius: 20px;
@@ -25,12 +26,12 @@ h1 {
 #guess-button {
   display: block;
   margin: 0 auto;
-  padding: 10px 20px;
-  font-size: 18px;
-  background-color: #0cbaba;
+  padding: 10px 50px;
+  font-size: 20px;
+  background-color: #0cba63;
   color: #fff;
   border: none;
-  border-radius: 3px;
+  border-radius: 5px;
 }
 
 button:active {
@@ -38,11 +39,12 @@ button:active {
 }
 
 .letter {
-  border: 1px solid black;
-  padding: 3px;
+  border-radius: 5px;
+  padding: 13px 17px 13px 17px;
   margin: 3px;
   min-width: 20px;
   text-align: center;
+  font-size: 25px;
   display: inline-block;
 }
 
